[package]
# Package metadata and configuration
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Library configuration
crate-type = ["cdylib"]

[dependencies]
# Specifies the dependencies required by the project
napi        = "3"
napi-derive = "3"

[build-dependencies]
# Build-time dependencies of the project
napi-build = "3"

[profile.release]
# Release profile settings
lto = true
